src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__bash_case_bare_wildcard_excluded.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 3.0,
  "average": 1.5,
  "min": 1.0,
  "max": 2.0,
  "modified": {
    "sum": 3.0,
    "average": 1.5,
    "min": 1.0,
    "max": 2.0
  }
}
