src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__bash_case_statement.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 4,
  "value": 1,
  "average": 4.0,
  "min": 1,
  "max": 3,
  "modified": {
    "sum": 3,
    "value": 1,
    "average": 3.0,
    "min": 1,
    "max": 2
  }
}
