src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__bash_nested_control_flow.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 5,
  "average": 5.0,
  "min": 1,
  "max": 4,
  "modified": {
    "sum": 5,
    "average": 5.0,
    "min": 1,
    "max": 4
  }
}
