src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__bash_simple_function.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 2.0,
  "average": 2.0,
  "min": 1.0,
  "max": 1.0,
  "modified": {
    "sum": 2.0,
    "average": 2.0,
    "min": 1.0,
    "max": 1.0
  }
}
