src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__mozjs_logical_operators.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 5,
  "value": 1,
  "average": 5.0,
  "min": 1,
  "max": 4,
  "modified": {
    "sum": 5,
    "value": 1,
    "average": 5.0,
    "min": 1,
    "max": 4
  }
}
