src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__tcl_1_level_nesting.snap
---
source: src/metrics/cyclomatic.rs
assertion_line: 1486
expression: metric.cyclomatic
---
{
  "sum": 4.0,
  "average": 2.0,
  "min": 1.0,
  "max": 3.0
}
