src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__tcl_catch_branch.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 3.0,
  "average": 3.0,
  "min": 1.0,
  "max": 2.0,
  "modified": {
    "sum": 3.0,
    "average": 3.0,
    "min": 1.0,
    "max": 2.0
  }
}
