src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__tcl_elseif_branch.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 4,
  "average": 4.0,
  "min": 1,
  "max": 3,
  "modified": {
    "sum": 4,
    "average": 4.0,
    "min": 1,
    "max": 3
  }
}
