src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__tcl_logical_operators.snap
---
source: src/metrics/cyclomatic.rs
assertion_line: 1522
expression: metric.cyclomatic
---
{
  "sum": 5.0,
  "average": 2.5,
  "min": 1.0,
  "max": 4.0
}
